# uv-freeze-wheel

./: .gitignore  Cargo.toml  flake.nix  hello.py  pyproject.toml  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4r8s42c9mwfvgdlxv0izb1cmlzrsb5nz-source  csfywra6032psdbgna9qcbdads87gmzw-source  dm959rfgcszgx23pxx2v04sq9wym20zf-source
src/: main.rs
