[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uv-freeze-wheel"
version = "0.1.0"
description = "A tool that uses the uv lockfile to lock dependencies in built wheel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "maturin>=1.7.5",
    "pip>=24.3.1",
    "wheel>=0.45.1",
]
